--- a/src/app/pages/user/print-quiz/print-quiz.component.html
+++ b/src/app/pages/user/print-quiz/print-quiz.component.html
@@ -1,4 +1,14 @@
+<!-- {{reportData |json}} -->
+<!-- {{theoryDetails|json}} -->
 <!-- {{theoryAnswer|json}} -->
+
+<!-- {{questions | json}} -->
+
+<!-- <hr> -->
+{{questionWithAnswers | json}}
+
+<hr>
+{{resultsOBJ | json}}
 <ngx-ui-loader fgsColor="#ff4081" pbColor="#ff4081" textColor="#ff4081" pbThickness="6"
     text="Preparing results please wait...!"></ngx-ui-loader>
 
@@ -11,13 +21,13 @@
                     <!-- HEADER SECTION -->
                     <div class="caption">
                         <ng-container *ngIf="reportData && reportData.length > 0; else alternateHeader">
-                          <p id="cape">
+                            <p id="cape">
                                 University of Cape Coast.<br>
                                 School of Physical Sciences.<br>
                                 Department of Computer Science and Information Technology<br>
                                 <b>{{ reportData[0]?.quiz?.category?.title }}</b>
                                 {{ reportData[0]?.quiz?.title }}. Time Allowed:
-                                <i><b>{{ reportData[0]?.quiz?.quizTime }} minutes</b></i><br>
+                                <i><b>{{totalTime() | minutesToDuration }}</b></i><br>
                                 <label>Index Number:
                                     <b>{{ username | uppercase }}</b>
                                 </label>
@@ -30,7 +40,7 @@
                                 Department of Computer Science and Information Technology<br>
                                 <b>{{ questionWithAnswers[0]?.quiz?.category?.title }}</b>
                                 {{ questionWithAnswers[0]?.quiz?.title }}. Time Allowed:
-                                <i><b>{{ questionWithAnswers[0]?.quiz?.quizTime }} minutes</b></i><br>
+                                <i><b>{{totalTime() | minutesToDuration }}</b></i><br>
                                 <label>Index Number:
                                     <b>{{ username | uppercase }}</b>
                                 </label>
@@ -67,8 +77,107 @@
                     <!-- SECTION A (OBJECTIVE QUESTIONS) -->
                     <div *ngIf="questions && questions.length > 0 && questionWithAnswers && questionWithAnswers.length > 0 &&
                         (questions[0].quiz.quizType === 'OBJ' || questions[0].quiz.quizType === 'BOTH')">
-                        <h1 style="text-align: center;">Section A</h1>
-                        <mat-card *ngFor="let qA of questionWithAnswers; let i = index" class="mt10">
+                        <!-- <h1 style="text-align: center;">Section A</h1> -->
+                        <h1 class="section-header">
+                            Section A
+                            <b class="section-total">
+                                Total Marks: <em class="grand-totals">{{reportData[0].marks}}</em>
+                            </b>
+                        </h1>
+
+
+
+
+
+
+
+<mat-card *ngFor="let qA of resultsOBJ.results; let i = index" class="mt10">
+  <mat-card-content>
+
+    <p>
+      <b>Q {{ i + 1 }}</b>
+      <span class="ml10" [innerHTML]="qA.content"></span>
+
+      <!-- Status -->
+      <span class="ml10" [ngClass]="{
+        'text-success': qA.status === 'CORRECT',
+        'text-warning': qA.status === 'PARTIAL',
+        'text-danger': qA.status === 'WRONG',
+        'text-muted': qA.status === 'SKIPPED'
+      }">
+        ({{ qA.status }})
+      </span>
+    </p>
+
+    <mat-divider></mat-divider>
+    <br />
+
+    <div class="row mt20">
+      <!-- OPTION 1 -->
+      <div class="col-md-6">
+        <input type="checkbox" [checked]="qA.correct_answer?.includes(qA.option1)" disabled />
+        <span [ngClass]="{
+          'student-selected': qA.selectedAnswers?.includes(qA.option1),
+          'wrong-selected': qA.selectedAnswers?.includes(qA.option1) && !qA.correct_answer?.includes(qA.option1)
+        }">
+          {{ qA.option1 }}
+        </span>
+      </div>
+
+      <!-- OPTION 2 -->
+      <div class="col-md-6">
+        <input type="checkbox" [checked]="qA.correct_answer?.includes(qA.option2)" disabled />
+        <span [ngClass]="{
+          'student-selected': qA.selectedAnswers?.includes(qA.option2),
+          'wrong-selected': qA.selectedAnswers?.includes(qA.option2) && !qA.correct_answer?.includes(qA.option2)
+        }">
+          {{ qA.option2 }}
+        </span>
+      </div>
+
+      <!-- OPTION 3 -->
+      <div class="col-md-6">
+        <input type="checkbox" [checked]="qA.correct_answer?.includes(qA.option3)" disabled />
+        <span [ngClass]="{
+          'student-selected': qA.selectedAnswers?.includes(qA.option3),
+          'wrong-selected': qA.selectedAnswers?.includes(qA.option3) && !qA.correct_answer?.includes(qA.option3)
+        }">
+          {{ qA.option3 }}
+        </span>
+      </div>
+
+      <!-- OPTION 4 -->
+      <div class="col-md-6">
+        <input type="checkbox" [checked]="qA.correct_answer?.includes(qA.option4)" disabled />
+        <span [ngClass]="{
+          'student-selected': qA.selectedAnswers?.includes(qA.option4),
+          'wrong-selected': qA.selectedAnswers?.includes(qA.option4) && !qA.correct_answer?.includes(qA.option4)
+        }">
+          {{ qA.option4 }}
+        </span>
+      </div>
+    </div>
+
+    <!-- SKIPPED -->
+    <div *ngIf="qA.status === 'SKIPPED'" class="mt10 text-warning">
+      Skipped
+    </div>
+
+  </mat-card-content>
+</mat-card>
+
+
+
+
+
+
+
+
+
+
+
+
+                        <!-- <mat-card *ngFor="let qA of questionWithAnswers; let i = index" class="mt10">
                             <mat-card-content>
                                 <p>
                                     <b>Q {{ i + 1 }}</b>
@@ -103,7 +212,14 @@
                                     </div>
                                 </div>
                             </mat-card-content>
-                        </mat-card>
+                        </mat-card> -->
+
+
+
+
+
+
+
                     </div>
 
                     <!-- Username Watermark -->
@@ -138,8 +254,8 @@
                                             </p>
                                             <p class="question-score">
                                                 <strong>Score:</strong>
-                                                <span class="score-value">{{ items.score }}</span>/
-                                                <span class="max-marks">{{ items.maxMarks }}</span>
+                                                <span class="score-value"> {{ items.score }}</span> /<span
+                                                    class="max-marks"> {{ items.maxMarks }}</span>
                                             </p>
                                         </div>
 
